The fun police stole my kidney (help)